# facenet-ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
launch/: test.launch
src/: facenet_node.py
